[gd_scene load_steps=4 format=3 uid="uid://d3h2j8nrwf4sn"]

[ext_resource type="Script" path="res://scripts/tela_inicial.gd" id="1_lqfrs"]
[ext_resource type="Texture2D" uid="uid://edo53m1lpd5t" path="res://Sprites/Glacial-mountains-parallax-background_vnitti_v3/Glacial-mountains-parallax-background_vnitti/Layers/glacial_mountains.png" id="2_hst1g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kiewl"]
bg_color = Color(0.598895, 0.718335, 0.972671, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lqfrs")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.560955, 0.560955, 0.560955, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -20.0
offset_right = 68.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="jogar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
theme_override_styles/focus = SubResource("StyleBoxFlat_kiewl")
text = "Jogar"
flat = true

[node name="Opcao" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_kiewl")
text = "Sobre"
flat = true

[node name="Sair" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_kiewl")
text = "Sair
"
flat = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 64.0
offset_right = 442.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 25
text = "Verlene"

[node name="GlacialMountains" type="Sprite2D" parent="."]
position = Vector2(320, 304)
scale = Vector2(1.66667, 0.944444)
texture = ExtResource("2_hst1g")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="VBoxContainer/jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="VBoxContainer/Opcao" to="." method="_on_opcao_pressed"]
[connection signal="pressed" from="VBoxContainer/Sair" to="." method="_on_sair_pressed"]
